--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "t",
+  "homepage": "https://bayan.github.io/task-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
